tests/cli/co2cc/simple_diagnostic/stderr_subdir.snapshot
Error: Unresolved name nonexistent
   ╭─[ ../broken.c:1:25 ]
   │
 1 │ int main(void) { return nonexistent; }
   │                         ─────┬─────  
   │                              ╰─────── Unresolved name nonexistent
───╯
